--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <plugin.api.version>3.2.3</plugin.api.version>
         <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
         <mockito-core.version>1.9.0</mockito-core.version>
+        <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
     </properties>
 
     <url>http://maven.apache.org</url>
@@ -67,7 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
