--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
         <mockito-core.version>1.9.0</mockito-core.version>
         <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
 
     <url>http://maven.apache.org</url>
@@ -50,6 +51,11 @@
             <artifactId>mockito-core</artifactId>
             <version>${mockito-core.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
